[gd_scene load_steps=2 format=3 uid="uid://c4i3ijcoiee41"]

[ext_resource type="Script" uid="uid://c5wxvlqxdheat" path="res://order_list.gd" id="1_6fddx"]

[node name="OrderList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6fddx")

[node name="Control" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0321181
anchor_top = 0.0864198
anchor_right = 0.965278
anchor_bottom = 0.865741
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
metadata/_edit_use_anchors_ = true

[node name="STOCK" type="Control" parent="Control"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Control/STOCK"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="OrderList" type="VBoxContainer" parent="Control/STOCK/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="FURNITURE" type="Control" parent="Control"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="FurnitureList" type="VBoxContainer" parent="Control/FURNITURE"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="EXPANSIONS" type="Control" parent="Control"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ExpansionList" type="VBoxContainer" parent="Control/EXPANSIONS"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2
